Resolved conflicts and updated components

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,90 +1,49 @@
-<p>dashboard works!</p>
-<app-header></app-header>
-<div class="container">
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Main Section and Sidebar -->
-  <div class="row">
-    <!-- Main Section -->
-    <div class="col-md-8">
-      <section class="p-3 bg-light">
-        <h2>APPDEV1</h2>
-        <p>This course</p>
-      </section>
-    </div>
-    <!-- Sidebar -->
-    <div class="col-md-4">
-      <aside class="p-3 bg-light">
-        <h3>Other Courses</h3>
-        <ul class="list-group">
-          <li class="list-group-item">
-            <a href="#">SYSINT1</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">PROGIT</a>
-          </li>
-        </ul>
-      </aside>
-    </div>
-  </div>
-</div>
-
-<!-- Footer -->
-<footer class="bg-dark text-white text-center p-3">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dashboard</title>
+</head>
+<body>
   <div class="container">
-    <div class="row">
-      <!-- Contact Info -->
-      <div class="col-md-6 mb-4">
-        <h5>Contact Us</h5>
-        <p>
-          Email: 20227403@s.ubaguio.edu<br>
-          Phone: 0929229292<br>
-          Address: Baguio City
-        </p>
+    <!-- Other content -->
+    <footer class="bg-dark text-white text-center p-3">
+      <div class="container">
+        <div class="row">
+          <!-- Contact Info -->
+          <div class="col-md-6 mb-4">
+            <h5>Contact Us</h5>
+            <p>
+              Email: 20227403&#64;s.ubaguio.edu<br>
+              Phone: (123) 456-7890<br>
+              Address: 123 App Development Lane, Tech City
+            </p>
+          </div>
+          <!-- Social Media Links -->
+          <div class="col-md-6 mb-4">
+            <h5>Follow Us</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="https://www.facebook.com" class="text-white">Facebook</a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com" class="text-white">Twitter</a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com" class="text-white">Instagram</a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com" class="text-white">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <!-- Social Media Links -->
-      <div class="col-md-6 mb-4">
-        <h5>Follow Us</h5>
-        <ul class="list-unstyled">
-          <li>
-            <a href="https://www.facebook.com" class="text-white">Facebook</a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com" class="text-white">Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com" class="text-white">Instagram</a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com" class="text-white">LinkedIn</a>
-          </li>
-        </ul>
+      <div class="bg-primary text-center p-2">
+        © 2025 Your Company Name
       </div>
-    </div>
+    </footer>
   </div>
-  <div class="bg-primary text-center p-2">
-    © 2025 appdevidb2 EXAM
-  </div>
-</footer>
+</body>
+</html>
